adds get swagger
