# back-end/internal/handlers/tutor/getHandler.go
@@ -1,6 +1,7 @@
 package tutor
 
 import (
+	"context"
 	"encoding/json"
 	"github.com/gorilla/mux"
 	"github.com/loukaspe/nursing-academiq/internal/core/services"
@@ -25,11 +26,49 @@ func NewGetTutorHandler(
 	}
 }
 
+// Response when we get a Tutor
+// swagger:model GetTutorResponse
 type GetTutorResponse struct {
+	// possible error message
+	//
+	// Required: false
 	ErrorMessage string `json:"errorMessage,omitempty"`
-	Tutor        *Tutor `json:"tutor,omitempty"`
+	// retrieved tutor
+	//
+	// Required: true
+	Tutor *TutorRequest `json:"tutor,omitempty"`
 }
 
+// swagger:operation GET /tutor/{tutorId} getTutor
+//
+// # It updates a User
+//
+// ---
+//
+//	Consumes:
+//	- application/json
+//
+//	Produces:
+//	- application/json
+//
+//	Schemes:
+//	- http
+//	- https
+//
+// responses:
+//
+//	"200":
+//		description: Tutor retrieved successfully
+//		schema:
+//			$ref: "#/definitions/GetTutorResponse"
+//	"404":
+//		description: Requested tutor not found
+//		schema:
+//			$ref: "#/definitions/GetTutorResponse"
+//	"500":
+//		description: Internal server error - check logs for details
+//		schema:
+//			$ref: "#/definitions/UpdateTutorResponse"
 func (handler *GetTutorHandler) GetTutorController(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Content-Type", "application/json")
 	//var err error
@@ -50,7 +89,7 @@ func (handler *GetTutorHandler) GetTutorController(w http.ResponseWriter, r *htt
 		return
 	}
 
-	tutor, err := handler.TutorService.GetTutor(uint32(uid))
+	tutor, err := handler.TutorService.GetTutor(context.TODO(), uint32(uid))
 	if dataNotFoundErrorWrapper, ok := err.(*apierrors.DataNotFoundErrorWrapper); ok {
 		handler.logger.WithFields(log.Fields{
 			"errorMessage": dataNotFoundErrorWrapper.Unwrap().Error(),
@@ -67,16 +106,28 @@ func (handler *GetTutorHandler) GetTutorController(w http.ResponseWriter, r *htt
 		return
 	}
 
-	response.Tutor = &Tutor{
-		Username:     tutor.Username,
-		Password:     tutor.Password,
-		FirstName:    tutor.FirstName,
-		LastName:     tutor.LastName,
-		Email:        tutor.Email,
-		BirthDate:    tutor.BirthDate.String(),
-		PhoneNumber:  tutor.PhoneNumber,
-		Photo:        tutor.Photo,
-		AcademicRank: tutor.AcademicRank,
+	response.Tutor = &TutorRequest{
+		Tutor: struct {
+			Username     string `json:"username"`
+			Password     string `json:"password"`
+			FirstName    string `json:"first_name"`
+			LastName     string `json:"last_name"`
+			Email        string `json:"email"`
+			BirthDate    string `json:"birth_date"`
+			PhoneNumber  string `json:"phone_number"`
+			Photo        string `json:"photo"`
+			AcademicRank string `json:"academic_rank"`
+		}{
+			Username:     tutor.Username,
+			Password:     tutor.Password,
+			FirstName:    tutor.FirstName,
+			LastName:     tutor.LastName,
+			Email:        tutor.Email,
+			BirthDate:    tutor.BirthDate.String(),
+			PhoneNumber:  tutor.PhoneNumber,
+			Photo:        tutor.Photo,
+			AcademicRank: tutor.AcademicRank,
+		},
 	}
 
 	json.NewEncoder(w).Encode(response)
